--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "this is gone be a big ",
   "main": "index.js",
   "scripts": {
-"start": "nodemon index.js"
+    "start": "nodemon index.js"
   },
   "author": "ankit",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.7.0",
+    "mongoose": "^8.4.1",
     "nodemon": "^3.1.2",
     "socket.io": "^4.7.5"
   }
